welcome.lessons.welcome.variables.RunHalf.scala.error
RunHalf:6: error: illegal start of statement
	if (estSurOrange()) {caseOrange=caseOrange+1};]}
                                                      ^